# foldbase

./: .env.local.example  .gitignore  AGENTS.md  Dockerfile  MANIFESTO.md  README.md  justfile  openapi.yaml  package.json
clients/python/: pyproject.toml
clients/python/foldbase/: __init__.py  client.py  errors.py  id.py  schema.py
clients/python/tests/: authoring.py  smoke.py  subscribe.py
clients/ts/: Justfile  README.md  package.json
clients/ts/src/: client.ts  id.ts  index.ts  projection.ts  schema.ts  types.ts
clients/ts/test/: smoke.mjs  subscribe.mjs
conformance/: harness.mjs  realtime.mjs  run.mjs
docs/: ARCHITECTURE.md  CNAME  DESIGN.md  TOOLCHAIN.md  architecture.html
docs/adr/: 001-contract-first.md  002-auth-modes.md  003-plane-separation.md  004-service-token-tenant-scope.md  005-no-policy-bypass.md  006-go-no-orm.md  007-client-sdks.md  008-stream-type.md  009-realtime-sse.md  010-postgres-dialect.md  011-retire-ts-reference.md  012-libsql-turso.md  README.md
examples/taskboard-py/: board.py
examples/taskboard-ts/: board.mjs
examples/taskboard-web/: server.mjs
go/: Dockerfile  go.mod  go.sum  main.go
go/internal/auth/: auth.go  auth_test.go
go/internal/bus/: bus.go
go/internal/dialect/: conn.go  dialect.go  dialect_test.go
go/internal/httpapi/: router.go
go/internal/jwt/: jwt.go
go/internal/readmodel/: projector.go  query.go  query_test.go  registry.go  types.go
loop/: ACCEPTANCE.md
site/: index.html
src/: app.test.ts  app.ts  auth.test.ts  index.ts
src/lib/: auth.ts
src/routes/: readmodel.ts  streams.ts
(+2 files in other folders)
